--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Design dump</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- My custum css -->
     <link rel="stylesheet" href="./ASSETS/css/root.css">
     <link rel="stylesheet" href="./ASSETS/css/style.css">
+    <link rel="shortcut icon" href="./ASSETS/img/png/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
