--- a/index.html
+++ b/index.html
@@ -112,34 +112,34 @@
             <div class="pt-4">
                 <div class="d-grid  grid_temp grid_gap2 py-5">
                     <div class="grid-items grid1">
-                        <img src="./ASSETS/img/png/sec2_img1.png" alt="img" class="w-100 h-100 hover_img transition ">
+                        <img src="./ASSETS/img/png/sec2_img1.png" alt="img" class="w-100 h-100 hover_img1 transition ">
                     </div>
                     <div class="grid-items grid2">
-                        <img src="./ASSETS/img/png/sec2_img2.png" alt="img" class="w-100 h-100 hover_img transition ">
+                        <img src="./ASSETS/img/png/sec2_img2.png" alt="img" class="w-100 h-100 hover_img1 transition ">
                     </div>
                     <div class="grid-items grid3">
-                        <img src="./ASSETS/img/png/sec2_img3.png" alt="img" class="w-100 h-100 hover_img transition ">
+                        <img src="./ASSETS/img/png/sec2_img3.png" alt="img" class="w-100 h-100 hover_img1 transition ">
                     </div>
                     <div class="grid-items grid4">
-                        <img src="./ASSETS/img/png/sec2_img4.png" alt="img" class="w-100 h-100 hover_img transition ">
+                        <img src="./ASSETS/img/png/sec2_img4.png" alt="img" class="w-100 h-100 hover_img1 transition ">
                     </div>
                     <div class="grid-items grid5">
-                        <img src="./ASSETS/img/png/sec2_img5.png" alt="img" class="w-100 h-100 hover_img transition ">
+                        <img src="./ASSETS/img/png/sec2_img5.png" alt="img" class="w-100 h-100 hover_img1 transition ">
                     </div>
                     <div class="grid-items grid6">
-                        <img src="./ASSETS/img/png/sec2_img6.png" alt="img" class="w-100 h-100 hover_img transition ">
+                        <img src="./ASSETS/img/png/sec2_img6.png" alt="img" class="w-100 h-100 hover_img1 transition ">
                     </div>
                     <div class="grid-items grid7">
-                        <img src="./ASSETS/img/png/sec2_img7.png" alt="img" class="w-100 h-100 hover_img transition ">
+                        <img src="./ASSETS/img/png/sec2_img7.png" alt="img" class="w-100 h-100 hover_img1 transition ">
                     </div>
                     <div class="grid-items grid8">
-                        <img src="./ASSETS/img/png/sec2_img8.png" alt="img" class="w-100 h-100 hover_img transition ">
+                        <img src="./ASSETS/img/png/sec2_img8.png" alt="img" class="w-100 h-100 hover_img1 transition ">
                     </div>
                     <div class="grid-items grid9">
-                        <img src="./ASSETS/img/png/sec2_img9.png" alt="img" class="w-100 h-100 hover_img transition ">
+                        <img src="./ASSETS/img/png/sec2_img9.png" alt="img" class="w-100 h-100 hover_img1 transition ">
                     </div>
                     <div class="grid-items grid10">
-                        <img src="./ASSETS/img/png/sec2_img10.png" alt="img" class="w-100 h-100 hover_img transition ">
+                        <img src="./ASSETS/img/png/sec2_img10.png" alt="img" class="w-100 h-100 hover_img1 transition ">
                     </div>
                 </div>
             </div>
