--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <section>
         <div class="container pt-4">
-            <h1 class="text-center fs_98 fw-bold clr_blue py-sm-5 my-sm-5 py-4  letter_n2 design_animation">Design Dump!!!</h1>
+            <h1 class="text-center fs_98 fw-bold clr_blue py-sm-5 my-sm-5 py-4  letter_n2 design_animation transition">Design Dump!!!</h1>
             <div class="py-xl-5 mb-3"></div>
             <div class="d-grid  grid_temp grid_gap pt-5 ">
                 <div class="grid-items grid-item1 ">
